Use Integer.valueOf(int) instead of new Integer(int). Should improve performance, but it is mostly to make FindBugs happy.
(from subversion r6025)